--- a/index.html
+++ b/index.html
@@ -17,19 +17,21 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
-                <img src="img/logoGrand.png" alt="Grand logo tête batman formes géométrique ">
-                <h1>L'homme chauve souris</h1>
-
+                <section>
+                    <img src="img/logoGrand.png" alt="Grand logo tête batman formes géométrique ">
+                    <h1>L'homme chauve-souris</h1>
+                </section>
+                
             </header>
 
             <main>
                 <Section>
                     <h2>History.</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt veniam nisi facilis provident odio veritatis, tenetur quidem quas quasi rem quibusdam molestias odit aperiam, unde voluptate rerum pariatur, magni. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam neque, porro culpa est, consequuntur earum. Non maiores deleniti laborum eveniet hic, ipsum fugiat modi quas dolor incidunt eaque, tenetur culpa!</aliquid></p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt veniam nisi facilis provident odio veritatis, tenetur quidem quas quasi rem quibusdam molestias odit aperiam, unde voluptate rerum pariatur, magni. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam neque, porro culpa est, consequuntur earum. Non maiores deleniti laborum eveniet hic, ipsum fugiat modi quas dolor incidunt eaque, tenetur culpa!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt veniam nisi facilis provident odio veritatis, tenetur quidem quas quasi rem quibusdam molestias odit aperiam, unde voluptate rerum pariatur, magni. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam neque, porro culpa est, consequuntur earum. Non maiores deleniti laborum eveniet hic, ipsum fugiat modi quas dolor incidunt eaque, tenetur culpa!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt veniam nisi facilis provident odio veritatis, tenetur quidem quas quasi rem quibusdam molestias odit aperiam, unde voluptate rerum pariatur, magni. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam neque, porro culpa est, consequuntur earum. Non maiores deleniti laborum eveniet hic, ipsum fugiat modi quas dolor incidunt eaque, tenetur culpa!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt veniam nisi facilis provident odio veritatis, tenetur quidem quas quasi rem quibusdam molestias odit aperiam, unde voluptate rerum pariatur, magni. Lorem ipsum </p>
                 </Section>
 
                 <Section>
-                    <h2>Picure.</h2>
+                    <h2>Pictures.</h2>
                     <article>
                         <img src="img/batman.jpg" alt="photo portrait de batman">
                         <a href="#">Loupe</a>
@@ -69,6 +71,7 @@
                         <input type="text" placeholder="Surname">
                         <input type="text" placeholder="Phone">
                         <input type="email" placeholder="Mail">
+                        <textarea name="Message" id="" cols="30" rows="10"></textarea>
                         <input type="submit" name="Go">
 
                     </form>
