nouvelle essaie CSS propre

--- a/ESSAI 2/index.html
+++ b/ESSAI 2/index.html
@@ -29,12 +29,12 @@
     
     <main>
         <section>
-            <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero deleniti molestiae, quasi quod recusandae qui aliquam, temporibus omnis eaque adipisci tempore possimus error provident distinctio obcaecati perferendis blanditiis earum excepturi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe eum rem at aut, dolores distinctio sit praesentium minima quos perspiciatis a nobis eius delectus error, cumque itaque tempore iste accusantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora commodi recusandae natus reprehenderit quos voluptate, reiciendis hic dolorem vitae quasi, eius vero nemo minima beatae. Eaque laborum in neque aliquid.Lorem</p>
+            <h2>History.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat perferendis, veritatis! Non quasi, quas sint earum optio atque, incidunt assumenda cupiditate nulla quis, fuga mollitia adipisci animi eos quae neque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero deleniti molestiae, quasi quod recusandae qui aliquam, temporibus omnis eaque adipisci tempore possimus error provident distinctio obcaecati perferendis blanditiis earum excepturi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe eum rem at aut, dolores distinctio sit praesentium minima quos perspiciatis a nobis eius delectus error, cumque itaque tempore iste accusantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora commodi recusandae natus reprehenderit quos voluptate, reiciendis hic dolorem vitae quasi, eius vero nemo minima beatae. Eaque laborum in neque aliquid.LoremLorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat perferendis, veritatis! Non quasi, quas sint earum optio atque, incidunt assumenda cupiditate nulla quis, fuga mollitia adipisci animi eos quae neque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero deleniti molestiae, quasi quod recusandae qui aliquam, temporibus omnis eaque adipisci tempore possimus error provident distinctio obcaecati perferendis blanditiis earum excepturi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe eum rem at aut, dolores distinctio sit praesentium minima quos perspiciatis a nobis eius delectus error, cumque itaque tempore iste accusantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora commodi recusandae natus reprehenderit quos voluptate, reiciendis hic dolorem vitae quasi, eius vero nemo minima beatae. Eaque laborum in neque aliquid.Lorem</p>
         </section>
 
         <section>
-            <h2>Pictures</h2>
+            <h2>Pictures.</h2>
             <img src="img/batman.jpg" alt="Batman">
             <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
 
@@ -55,7 +55,7 @@
         </section>
 
         <section>
-            <h2>Contact</h2>
+            <h2>Contact.</h2>
             <form action="#">
                 <input type="Name" placeholder="Nom">
                 <input type="Surname" placeholder="Surname">
